--- a/mystyle.css
+++ b/mystyle.css
@@ -39,13 +39,13 @@
 .image{
     width: 600px;
     display: block;
-    margin: 0 auto;
+    margin-left: 50px;
 }
 
 .description{
     width: 1000px;
     display: block;
-    margin: 50px auto;
+    margin-left: 50px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
     color: rgb(255, 242, 226);
